[tool.poetry]
name = "interactive_coding"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ipython = "^7.3"
jupyterlab = "^0.35.4"
doitlive = "^4.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

